--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <a href="../index.html" >Home Page</a>
             <a href="html/Projects.html" >Projects</a>
             <a href="html/Experiment.html" >Experiment</a>
+            <a href="nativedialogs.html"> nativedialogs</a>
+
         </nav>
     </header>
     <main>
