--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -27,14 +27,14 @@
     </header>
     <main>
         <button id="AlertButton">Alert</button>
-        <button id="ConfirmButton">Alert</button>
-        <button id="PromptButton">Alert</button>
-        <button id="SafePromptButton">Alert</button>
+        <button id="ConfirmButton">Confirm</button>
+        <button id="PromptButton">Prompt</button>
+        <button id="SafePromptButton">SafePrompt</button>
         <script>
             const alertBtn = document.getElementById("AlertButton");
             alertBtn.addEventListener("click",alertFunc);
 
-            const confirmBtn = docutment.getElementById("ConfirmButton");
+            const confirmBtn = document.getElementById("ConfirmButton");
             confirmBtn.addEventListener("click",confirmFunc);
 
             function confirmFunc()
