--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -43,7 +43,7 @@
                 {
                     var result;
                     result = confirm("Confirm?");
-                    document.getElementById("confirmOuput").innerHTML = result;
+                    document.getElementById("confirmOutput").innerHTML = result;
                 }
 
                 function alertFunc()
