--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -61,7 +61,7 @@
                     if (promptRes == null){
                         promptRes = "User didn’t enter anything";
                     }
-                    document.getElementById("promptOuput").innerHTML = promptRes;
+                    document.getElementById("promptOutput").innerHTML = promptRes;
                 }
             </script>
         </section>
