--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -33,7 +33,7 @@
             <button id="PromptButton">Prompt</button>
             <button id="SafePromptButton">SafePrompt</button>
 
-            <script type="text/javascript" src="DOMPURIFY-2.4.4/dist/purify.min.js">
+            <script type="text/javascript" src="DOMPURIFY-2.4.4/src/purify.js">
                 const alertBtn = document.getElementById("AlertButton");
                 alertBtn.addEventListener("click",alertFunc);
 
