Appropriate usage of libarires

--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.1/purify.min.js"></script>
+    <script type="text/javascript" src="dist/purify.min.js"></script>
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
             <button id="PromptButton">Prompt</button>
             <button id="SafePromptButton">SafePrompt</button>
 
-            <script type="text/javascript">
+            <script>
                 const alertBtn = document.getElementById("AlertButton");
                 alertBtn.addEventListener("click",alertFunc);
 
