--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -45,7 +45,7 @@
                 promptBtn.addEventListener("click",promptFunc);
 
                 const saferPromptBtn = document.getElementById("SafePromptButton");
-                saferPromptBtn.addEventListener("click", saferPromptFunc);
+                saferPromptBtn.addEventListener("click", () => alert('Alert!'));
 
                 function confirmFunc()
                 {
