--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -123,7 +123,7 @@
                 <form>
                     <p>Confirm Please.</p>
                     <div>
-                        <button id="confirmYes" value="default">Sure!</button>
+                        <button id="confirmYes" value="cancel">Sure!</button>
                         <button id ="confirmNo" value="cancel">No</button>
                     </div>
                 </form>
