Missing method=dialog fix

--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -120,7 +120,7 @@
                 </form>
             </dialog>
             <dialog id ="confirmDialog">
-                <form>
+                <form method="dialog">
                     <p>Confirm Please.</p>
                     <div>
                         <button id="confirmYes" value="cancel">Sure!</button>
