--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="html/Projects.html" >Projects</a>
             <a href="html/Experiment.html" >Experiment</a>
             <a href="nativedialogs.html"> nativedialogs</a>
-
+            <a href="html/crud.html"> crud</a>
         </nav>
     </header>
     <main>
