--- a/html/crud.html
+++ b/html/crud.html
@@ -41,6 +41,22 @@
                 </div>
             </section>
         </template>
+        <dialog id="blogCreateDialog">
+            <form method="dialog">
+                <div>
+                    <label for="diaTitle">Blog Title: </label>
+                    <input type="text" id="diaTitle" name="diaTitle">
+                    <label for="diaDate">Blog Date: </label>
+                    <input type="text" id="diaDate" name="diaDate">
+                    <label for="diaSummary">Blog Summary: </label>
+                    <input type="text" id="diaSummary" name="diaSummary">
+                </div>
+                <div>
+                    <button id="blogCreate" value="default">Create</button>
+                    <button id ="blogCancel" value="cancel">Cancel</button>
+                </div>
+            </form>
+        </dialog>
     </main>
 </body>
 
