Testing template fill with id

--- a/html/crud.html
+++ b/html/crud.html
@@ -30,14 +30,14 @@
     <main>
         <h1>BLOG</h1>
         <button id="postCreate">Create new Blog Post!</button>
-        <template class="templateBlog">
+        <template>
             <section>
-                <h2><output class="blogTitle"></output></h2>
-                <p><output class="blogDate"></output></p>
-                <p><output class="blogSummary"></output></p>
+                <h2><output id="blogTitle"></output></h2>
+                <p><output id="blogDate"></output></p>
+                <p><output id="blogSummary"></output></p>
                 <div>
-                    <button class="blogEdit">Edit</button>
-                    <button class="blogDelete">Delete</button>
+                    <button id="blogEdit">Edit</button>
+                    <button id="blogDelete">Delete</button>
                 </div>
             </section>
         </template>
