--- a/html/crud.html
+++ b/html/crud.html
@@ -58,6 +58,23 @@
                 </div>
             </form>
         </dialog>
+        <dialog id="blogEditDialog">
+            <form method="dialog">
+                <div>
+                    <label for="editTitle">Blog Title: </label>
+                    <input type="text" id="editTitle" name="editTitle">
+                    <label for="editDate">Blog Date: </label>
+                    <input type="text" id="editDate" name="editDate">
+                    <br>
+                    <label for="editSummary">Blog Summary: </label>
+                    <input type="text" id="editSummary" name="editSummary">
+                </div>
+                <div>
+                    <button id="editSubmit" value="default">Update</button>
+                    <button id ="editCancel" value="cancel">Cancel</button>
+                </div>
+            </form>
+        </dialog>
     </main>
 </body>
 
