Class + id change

--- a/html/crud.html
+++ b/html/crud.html
@@ -31,15 +31,13 @@
         <h1>BLOG</h1>
         <button id="postCreate">Create new Blog Post!</button>
         <template>
-            <section>
-                <h2><output id="blogTitle"></output></h2>
-                <p><output id="blogDate"></output></p>
-                <p><output id="blogSummary"></output></p>
-                <div>
-                    <button id="blogEdit">Edit</button>
-                    <button id="blogDelete">Delete</button>
-                </div>
-            </section>
+            <h2><output class ="blogTitle" id="blogTitle"></output></h2>
+            <p><output class ="blogDate" id="blogDate"></output></p>
+            <p><output class = "blogSummary" id="blogSummary"></output></p>
+            <div>
+                <button id="blogEdit">Edit</button>
+                <button id="blogDelete">Delete</button>
+            </div>
         </template>
         <dialog id="blogCreateDialog">
             <form method="dialog">
