Alright fixed that delete issue probably

--- a/html/crud.html
+++ b/html/crud.html
@@ -31,13 +31,15 @@
         <h1>BLOG</h1>
         <button id="postCreate">Create new Blog Post!</button>
         <template>
-            <h2><output class ="blogTitle" id="blogTitle"></output></h2>
-            <p><output class ="blogDate" id="blogDate"></output></p>
-            <p><output class = "blogSummary" id="blogSummary"></output></p>
-            <div>
-                <button id="blogEdit">Edit</button>
-                <button id="blogDelete">Delete</button>
-            </div>
+            <section>
+                <h2><output class ="blogTitle" id="blogTitle"></output></h2>
+                <p><output class ="blogDate" id="blogDate"></output></p>
+                <p><output class = "blogSummary" id="blogSummary"></output></p>
+                <div>
+                    <button id="blogEdit">Edit</button>
+                    <button id="blogDelete">Delete</button>
+                </div>
+            </section>
         </template>
         <dialog id="blogCreateDialog">
             <form method="dialog">
