new system test

--- a/html/crud.html
+++ b/html/crud.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img">
+        <img src="../images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img">
         <h1>Eric Chen's Portfolio</h1>
         <nav class="nav">
             <a href="../index.html" >Home Page</a>
