--- a/html/crud.html
+++ b/html/crud.html
@@ -9,7 +9,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<title>Personal Portfolio Website</title>
     <link href="images/favicon.ico" rel="icon">
-    <link rel="stylesheet" href="../index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -17,7 +16,7 @@
 </head>
 <body>
     <header>
-        <img src="../images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img">
+        <img src="images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img">
         <h1>Eric Chen's Portfolio</h1>
         <nav class="nav">
             <a href="../index.html" >Home Page</a>
