--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -15,8 +15,8 @@
     <script type="module" src="../js/blog.js"></script>
 </head>
 <body>
-    <header>
-        <img src="images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img">
+    <header style = "position: relative; text-align: center; border-width: var(--border-width); height:15rem; width: auto;">
+        <img src="../images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img" style=" height:100%; width: 100%; object-fit:cover;">
         <h1>Eric Chen's Portfolio</h1>
         <nav class="nav">
             <a href="../index.html" >Home Page</a>
@@ -25,6 +25,7 @@
             <a href="nativedialogs.html"> nativedialogs</a>
             <a href="crud.html"> crud</a>
             <a href="styledCrud.html"> crud</a>
+
         </nav>
     </header>
     <main>
@@ -41,18 +42,18 @@
                 </div>
             </section>
         </template>
-        <dialog id="blogCreateDialog">
-            <form method="dialog">
-                <div>
+        <dialog id="blogCreateDialog" style="background-color: lightblue; border-radius: 4px;">
+            <form method="dialog" style="padding:10px; display:flex; flex-direction: column; gap: 1rem;">
+                <div style="display: flex; flex-direction: column; padding:5px; gap:2px;">
                     <label for="diaTitle">Blog Title: </label>
                     <input type="text" id="diaTitle" name="diaTitle">
                     <label for="diaDate">Blog Date: </label>
                     <input type="text" id="diaDate" name="diaDate">
                     <br>
-                    <label for="diaSummary">Blog Summary: </label>
+                    <label for="diaSummary" style="height:40px;">Blog Summary: </label>
                     <input type="text" id="diaSummary" name="diaSummary">
                 </div>
-                <div>
+                <div style="display: flex; flex-direction: column; padding:5px; gap:2px;">
                     <button id="blogCreate" value="default">Create</button>
                     <button id ="blogCancel" value="cancel">Cancel</button>
                 </div>
