--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="html/Experiment.html" >Experiment</a>
             <a href="nativedialogs.html"> nativedialogs</a>
             <a href="html/crud.html"> crud</a>
-            <a href="html/styledCrud.html"> crud</a>
+            <a href="html/styledCrud.html"> Styledcrud</a>
         </nav>
     </header>
     <main>
