--- a/html/crud.html
+++ b/html/crud.html
@@ -24,7 +24,7 @@
             <a href="html/Experiment.html" >Experiment</a>
             <a href="nativedialogs.html"> nativedialogs</a>
             <a href="crud.html"> crud</a>
-            <a href="styledCrud.html"> crud</a>
+            <a href="styledCrud.html"> Styledcrud</a>
         </nav>
     </header>
     <main>
