--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -14,17 +14,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script type="module" src="../js/blog.js"></script>
 </head>
-<body>
-    <header style = "position: relative; text-align: center; border-width: var(--border-width); height:15rem; width: auto;">
-        <img src="../images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img" style=" height:100%; width: 100%; object-fit:cover;">
-        <h1>Eric Chen's Portfolio</h1>
-        <nav class="nav">
+<body style="margin: 0px; background-color: lavender;">
+    <header>
+        <h1>Eric Chen's CRUD</h1>
+        <nav class="nav" style="display: flex; gap: 20px;">
             <a href="../index.html" >Home Page</a>
             <a href="html/Projects.html" >Projects</a>
             <a href="html/Experiment.html" >Experiment</a>
             <a href="nativedialogs.html"> nativedialogs</a>
             <a href="crud.html"> crud</a>
-            <a href="styledCrud.html"> crud</a>
+            <a href="styledCrud.html"> Styledcrud</a>
 
         </nav>
     </header>
@@ -50,7 +49,7 @@
                     <label for="diaDate">Blog Date: </label>
                     <input type="text" id="diaDate" name="diaDate">
                     <br>
-                    <label for="diaSummary" style="height:40px;">Blog Summary: </label>
+                    <label for="diaSummary" height="40">Blog Summary: </label>
                     <input type="text" id="diaSummary" name="diaSummary">
                 </div>
                 <div style="display: flex; flex-direction: column; padding:5px; gap:2px;">
@@ -59,18 +58,18 @@
                 </div>
             </form>
         </dialog>
-        <dialog id="blogEditDialog">
-            <form method="dialog">
-                <div>
+        <dialog id="blogEditDialog" style="background-color: lightblue; border-radius: 4px;">
+            <form method="dialog" style="padding:10px; display:flex; flex-direction: column; gap: 1rem;">
+                <div style="display: flex; flex-direction: column; padding:5px; gap:2px;">
                     <label for="editTitle">Blog Title: </label>
                     <input type="text" id="editTitle" name="editTitle">
                     <label for="editDate">Blog Date: </label>
                     <input type="text" id="editDate" name="editDate">
                     <br>
-                    <label for="editSummary">Blog Summary: </label>
+                    <label for="editSummary" height="40">Blog Summary: </label>
                     <input type="text" id="editSummary" name="editSummary">
                 </div>
-                <div>
+                <div style="display: flex; flex-direction: column; padding:5px; gap:2px;">
                     <button id="editSubmit" value="default">Update</button>
                     <button id ="editCancel" value="cancel">Cancel</button>
                 </div>
