--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -14,10 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script type="module" src="../js/blog.js"></script>
 </head>
-<body style="margin: 0px; background-color: lavender;">
-    <header>
-        <h1>Eric Chen's CRUD</h1>
-        <nav class="nav" style="display: flex; gap: 20px;">
+<body style="margin: 0px; background-color: lavender; font-family: 'Roboto Condensed','Roboto', sans-serif;">
+    <header style="background-color: lightcoral;">
+        <h1 style="font-family: 'Abril Fatface', cursive, cursive;">Eric Chen's CRUD</h1>
+        <nav class="nav" style="display: flex; gap: 20px; justify-content:center; font-size:20px;">
             <a href="../index.html" >Home Page</a>
             <a href="html/Projects.html" >Projects</a>
             <a href="html/Experiment.html" >Experiment</a>
@@ -31,7 +31,7 @@
         <h1>BLOG</h1>
         <button id="postCreate">Create new Blog Post!</button>
         <template>
-            <section>
+            <section style="background-color: lightgreen; border-width: 2px; border-radius: 4px;">
                 <h2><output class ="blogTitle" id="blogTitle"></output></h2>
                 <p><output class ="blogDate" id="blogDate"></output></p>
                 <p><output class = "blogSummary" id="blogSummary"></output></p>
