--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -15,7 +15,7 @@
     <script type="module" src="../js/blog.js"></script>
 </head>
 <body style="margin: 0px; background-color: lavender; font-family: 'Roboto Condensed','Roboto', sans-serif;">
-    <header style="background-color: lightcoral;">
+    <header style="background-color: lightcoral;text-align:center; width:60%; margin:40px;">
         <h1 style="font-family: 'Abril Fatface', cursive, cursive;">Eric Chen's CRUD</h1>
         <nav class="nav" style="display: flex; gap: 20px; justify-content:center; font-size:20px;">
             <a href="../index.html" >Home Page</a>
@@ -27,17 +27,17 @@
 
         </nav>
     </header>
-    <main>
-        <h1>BLOG</h1>
-        <button id="postCreate">Create new Blog Post!</button>
+    <main style="text-align: center; margin: auto; padding: 10px; margin:auto;width: 70%;">
+        <h1 style=>BLOG</h1>
+        <button id="postCreate" style="margin:auto;">Create new Blog Post!</button>
         <template>
             <section style="background-color: lightgreen; border-width: 2px; border-radius: 4px;">
                 <h2><output class ="blogTitle" id="blogTitle"></output></h2>
                 <p><output class ="blogDate" id="blogDate"></output></p>
                 <p><output class = "blogSummary" id="blogSummary"></output></p>
                 <div>
-                    <button id="blogEdit">Edit</button>
-                    <button id="blogDelete">Delete</button>
+                    <img src="../images/pencil-edit-button.svg" alt="Placeholder art" draggable="false" id="blogEdit">
+                    <img src="../images/trash.svg" alt="Placeholder art" draggable="false" id="blogDelete">
                 </div>
             </section>
         </template>
