--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -15,7 +15,7 @@
     <script type="module" src="../js/blog.js"></script>
 </head>
 <body style="margin: 0px; background-color: lavender; font-family: 'Roboto Condensed','Roboto', sans-serif;">
-    <header style="background-color: lightcoral;text-align:center; width:60%; margin:40px;">
+    <header style="background-color: lightcoral; text-align: center; margin: auto; padding: 10px;width: 70%;">
         <h1 style="font-family: 'Abril Fatface', cursive, cursive;">Eric Chen's CRUD</h1>
         <nav class="nav" style="display: flex; gap: 20px; justify-content:center; font-size:20px;">
             <a href="../index.html" >Home Page</a>
@@ -27,7 +27,7 @@
 
         </nav>
     </header>
-    <main style="text-align: center; margin: auto; padding: 10px; margin:auto;width: 70%;">
+    <main style="text-align: center; margin: auto; padding: 10px;width: 70%;">
         <h1 style=>BLOG</h1>
         <button id="postCreate" style="margin:auto;">Create new Blog Post!</button>
         <template>
