--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -31,7 +31,7 @@
         <h1 style=>BLOG</h1>
         <button id="postCreate" style="margin:auto;">Create new Blog Post!</button>
         <template>
-            <section style="background-color: lightgreen; border-width: 2px; border-radius: 4px;">
+            <section style="background-color: lightgreen; border-width: 2px; border-radius: 4px;border-color: black;">
                 <h2><output class ="blogTitle" id="blogTitle"></output></h2>
                 <p><output class ="blogDate" id="blogDate"></output></p>
                 <p><output class = "blogSummary" id="blogSummary"></output></p>
