--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -31,13 +31,13 @@
         <h1 style=>BLOG</h1>
         <button id="postCreate" style="margin:auto;">Create new Blog Post!</button>
         <template>
-            <section style="background-color: lightgreen; border-width: 2px; border-radius: 4px;border-color: black;">
+            <section style="background-color: lightgreen; border-width: 2px; border-radius: 4px;border-color: black; border-style: solid;padding:10px">
                 <h2><output class ="blogTitle" id="blogTitle"></output></h2>
                 <p><output class ="blogDate" id="blogDate"></output></p>
                 <p><output class = "blogSummary" id="blogSummary"></output></p>
                 <div>
-                    <img src="../images/pencil-edit-button.svg" alt="Placeholder art" draggable="false" id="blogEdit">
-                    <img src="../images/trash.svg" alt="Placeholder art" draggable="false" id="blogDelete">
+                    <img src="../images/pencil-edit-button.svg" alt="Placeholder art" draggable="false" id="blogEdit" width="25" height="25">
+                    <img src="../images/trash-icon.svg" alt="Placeholder art" draggable="false" id="blogDelete" width="25" height="25">
                 </div>
             </section>
         </template>
@@ -49,7 +49,7 @@
                     <label for="diaDate">Blog Date: </label>
                     <input type="text" id="diaDate" name="diaDate">
                     <br>
-                    <label for="diaSummary" height="40">Blog Summary: </label>
+                    <label for="diaSummary">Blog Summary: </label>
                     <input type="text" id="diaSummary" name="diaSummary">
                 </div>
                 <div style="display: flex; flex-direction: column; padding:5px; gap:2px;">
@@ -66,7 +66,7 @@
                     <label for="editDate">Blog Date: </label>
                     <input type="text" id="editDate" name="editDate">
                     <br>
-                    <label for="editSummary" height="40">Blog Summary: </label>
+                    <label for="editSummary">Blog Summary: </label>
                     <input type="text" id="editSummary" name="editSummary">
                 </div>
                 <div style="display: flex; flex-direction: column; padding:5px; gap:2px;">
