--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -15,7 +15,7 @@
     <script type="module" src="../js/blog.js"></script>
 </head>
 <body style="margin: 0px; background-color: lavender; font-family: 'Roboto Condensed','Roboto', sans-serif;">
-    <header style="background-color: lightcoral; text-align: center; margin: auto; padding: 10px;width: 70%;">
+    <header style="background-color: lightcoral; text-align: center; margin: auto; padding: 10px;width: 70%;border-width: 2px; border-radius: 4px;border-color: black; border-style: solid;">
         <h1 style="font-family: 'Abril Fatface', cursive, cursive;">Eric Chen's CRUD</h1>
         <nav class="nav" style="display: flex; gap: 20px; justify-content:center; font-size:20px;">
             <a href="../index.html" >Home Page</a>
@@ -31,7 +31,7 @@
         <h1 style=>BLOG</h1>
         <button id="postCreate" style="margin:auto;">Create new Blog Post!</button>
         <template>
-            <section style="background-color: lightgreen; border-width: 2px; border-radius: 4px;border-color: black; border-style: solid;padding:10px; width:70%; margin:auto">
+            <section style="background-color: white; border-width: 2px; border-radius: 4px;border-color: black; border-style: solid;padding:10px; width:70%; margin:auto">
                 <h2><output class ="blogTitle" id="blogTitle"></output></h2>
                 <p><output class ="blogDate" id="blogDate"></output></p>
                 <p><output class = "blogSummary" id="blogSummary"></output></p>
