--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -36,8 +36,8 @@
                 <p><output class ="blogDate" id="blogDate"></output></p>
                 <p><output class = "blogSummary" id="blogSummary"></output></p>
                 <div>
-                    <img src="../images/pencil-edit-button.svg" alt="Placeholder art" draggable="false" id="blogEdit" width="25" height="25">
-                    <img src="../images/trash-icon.svg" alt="Placeholder art" draggable="false" id="blogDelete" width="25" height="25">
+                    <img src="../images/pencil-edit-button.svg" alt="Placeholder art" draggable="false" id="blogEdit" width="25" height="25" style="float:right;margin:5px;">
+                    <img src="../images/trash-icon.svg" alt="Placeholder art" draggable="false" id="blogDelete" width="25" height="25" style="float:right; margin:5px;" >
                 </div>
             </section>
         </template>
