--- a/html/styledCrud.html
+++ b/html/styledCrud.html
@@ -35,9 +35,9 @@
                 <h2><output class ="blogTitle" id="blogTitle"></output></h2>
                 <p><output class ="blogDate" id="blogDate"></output></p>
                 <p><output class = "blogSummary" id="blogSummary"></output></p>
-                <div style="margin-left:auto; margin-right:3px; padding: 5px;">
-                    <img src="../images/pencil-edit-button.svg" alt="Placeholder art" draggable="false" id="blogEdit" width="25" height="25" style="margin: 2px;">
-                    <img src="../images/trash-icon.svg" alt="Placeholder art" draggable="false" id="blogDelete" width="25" height="25" style="margin: 2px;" >
+                <div style="margin-left:auto; margin-right:3px; width:10%">
+                    <img src="../images/pencil-edit-button.svg" alt="Placeholder art" draggable="false" id="blogEdit" width="25" height="25" style="margin: 10px;">
+                    <img src="../images/trash-icon.svg" alt="Placeholder art" draggable="false" id="blogDelete" width="25" height="25" style="margin: 10px; margin-left: 30px;" >
                 </div>
             </section>
         </template>
