--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
                 function expandTech(techBlock)
                 {
+                    console.log("expanding!");
                     techBlock.style.display='block';
                 }
                 function hideTech(techBlock)
