--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="Tech-I-Know">
             <h2 style="text-align: left; justify-self: left; padding-left: 2.5%;">Technologies I know</h2>
             <section class="Tech">
-                <h3 id="Tech-Title">Unity</h3>
+                <h3>Unity</h3>
                 <div class="Tech-Description">
                     <picture>
                         <source media = "(min-width:900px)" srcset="images/Unity.svg" width="200" height="200" draggable="false">
@@ -68,7 +68,7 @@
                 </div>
             </section>
             <section class = "Tech">
-                <h3 id="Tech-Title">Unreal Engine</h3>
+                <h3>Unreal Engine</h3>
                 <div class="Tech-Description">
                     <picture>
                         <source media = "(min-width:900px)" srcset="images/Unreal.svg" width="200" height="200" draggable="false">
