--- a/html/crud.html
+++ b/html/crud.html
@@ -22,7 +22,7 @@
             <a href="../index.html" >Home Page</a>
             <a href="html/Projects.html" >Projects</a>
             <a href="html/Experiment.html" >Experiment</a>
-            <a href="nativedialogs.html"> nativedialogs</a>
+            <a href="../nativedialogs.html"> nativedialogs</a>
             <a href="crud.html"> crud</a>
             <a href="styledCrud.html"> Styledcrud</a>
         </nav>
