--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -26,6 +26,8 @@
             <a href="html/Experiment.html" >Experiment</a>
             <a href="nativedialogs.html"> nativedialogs</a>
             <a href="html/crud.html"> crud</a>
+            <a href="html/styledCrud.html"> crud</a>
+
         </nav>
     </header>
     <main>
