--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="nativedialogs.html"> nativedialogs</a>
             <a href="html/crud.html"> crud</a>
             <a href="html/styledCrud.html"> Styledcrud</a>
+            <a href="html/methodtest.html"> MethodTest</a>
         </nav>
     </header>
     <main>
