--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -8,14 +8,12 @@
 	<meta name="author" content="" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<title>Personal Portfolio Website</title>
-    <link href="images/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="images/landscapeImage.jpg" alt="Placeholder art" draggable="false" id="banner-img">
         <h1>Eric Chen's Portfolio</h1>
         <nav class="nav">
             <a href="../index.html" >Home Page</a>
@@ -48,11 +46,11 @@
                             'Content-Type': 'application/json'
                         },
                         body: JSON.stringify({
-                            name: 'Test 1'
+                            RecordID: document.getElementById('record').value
                         })
                     }).then(response => {
                         return response.json()
-                    }).then(data=> console.log(data))
+                    }).then(data=> document.getElementById('response').innerHTML = data)
                     .catch(error=> console.log('ERROR'))
                 }
                 
