--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -50,7 +50,10 @@
                         })
                     }).then(response => {
                         return response.json()
-                    }).then(data=> document.getElementById('response').innerHTML = data)
+                    }).then(data=> {
+                        document.getElementById('response').innerHTML = data;
+                        console.log(data);
+                    })
                     .catch(error=> console.log('ERROR'))
                 }
                 
